// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductName should merge classes and props 1`] = `
<div>
  <a
    class="wc-block-components-product-name lorem-ipsum"
    href="/"
  >
    Test product
  </a>
</div>
`;

exports[`ProductName should not render a link if disabled is true 1`] = `
<div>
  <span
    class="wc-block-components-product-name"
  >
    Test product
  </span>
</div>
`;

exports[`ProductName should render a link if disabled is false 1`] = `
<div>
  <a
    class="wc-block-components-product-name"
    href="/"
  >
    Test product
  </a>
</div>
`;

exports[`ProductName should render a link if disabled is not defined 1`] = `
<div>
  <a
    class="wc-block-components-product-name"
    href="/"
  >
    Test product
  </a>
</div>
`;
